service-nodejs/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nodejs
  namespace: dev
  labels:
    app: service-nodejs
spec:
  type: ClusterIP
  selector:
    app: service-nodejs
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
