service-nodejs/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-nodejs
  namespace: dev
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - service-nodejs.demo.example.com
    secretName: ssl-demo
  rules:
  - host: "service-nodejs.demo.example.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: service-nodejs
              port:
                number: 8080
